Update buhaTest.md